--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-PyYAML==3.12
+PyYAML>=4.2b1
 certifi==2018.4.16
 chardet==3.0.4
 idna==2.6
 pytz==2018.4
-requests==2.18.4
-urllib3==1.22
+requests>=2.20.0
+urllib3>=1.24.2
